--- a/app/components/navbar/navbar.html
+++ b/app/components/navbar/navbar.html
@@ -7,7 +7,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a ui-sref="index" class="navbar-brand">Brand</a>
+            <a ui-sref="index" class="navbar-brand">Calling Whiteboard</a>
         </div>
         <nav class="collapse navbar-collapse nsb-navbar-collapse" role="navigation" collapse="isCollapsed">
             <ul class="nav navbar-nav">
@@ -17,7 +17,7 @@
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li>
-                    <a ui-sref="error">Error</a>
+                    <a ui-sref="error">Error Page</a>
                 </li>
             </ul>
         </nav>
